# tree-sitter-niva

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example.niva  go.mod  grammar.js  main.niva  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-niva.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_niva/: __init__.py
bindings/python/tree_sitter_sas/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNiva/: niva.h
bindings/swift/TreeSitterNivaTests/: TreeSitterNivaTests.swift
bindings/swift/TreeSitterSas/: sas.h
bindings/swift/TreeSitterSasTests/: TreeSitterSasTests.swift
queries/: highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
